# une-femme-supply-chain

./: .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  INDEX.md  PRD.md  PROMPT_build.md  PROMPT_plan.md  README.md  loop.sh
Projects/Supply_Chain_Platform/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  railway.toml  requirements.txt
Projects/Supply_Chain_Platform/migrations/: env.py
Projects/Supply_Chain_Platform/migrations/versions/: 52fa8d4129df_seed_product_skus.py  69b388f315fc_create_inventory_events_table.py  a1b2c3d4e5f6_create_forecasts_table.py  b2c3d4e5f6g7_create_email_classifications_table.py  c3d4e5f6g7h8_create_procurement_workflows_table.py  d4e5f6g7h8i9_create_agent_audit_logs_table.py  e00126dfbb34_create_doh_materialized_views.py  e5f6g7h8i9j0_create_qb_invoices_tables.py
Projects/Supply_Chain_Platform/scripts/: setup_redash_dashboard.py  start.sh
Projects/Supply_Chain_Platform/sql/redash/: doh_by_sku.sql  doh_overview.sql  doh_overview_direct.sql  forecast_by_sku.sql  forecast_overview.sql  forecast_vs_actuals.sql  ship_dep_ratio.sql  ship_dep_ratio_by_sku.sql  ship_dep_ratio_direct.sql  stockout_alert.sql
Projects/Supply_Chain_Platform/src/: __init__.py  celery_app.py  config.py  database.py  main.py
Projects/Supply_Chain_Platform/src/agents/: __init__.py  procurement.py
Projects/Supply_Chain_Platform/src/api/: __init__.py  approval.py  audit.py  inventory.py  metrics.py  review.py  upload.py
Projects/Supply_Chain_Platform/src/models/: __init__.py  agent_audit_log.py  distributor.py  forecast.py  (+6 more)
Projects/Supply_Chain_Platform/tests/: __init__.py  test_api_inventory.py  test_api_metrics.py  test_api_upload.py  test_audit_logging.py  test_bol_processor.py  test_config.py  test_database.py  test_distributor_parser.py  test_document_ocr.py  test_email_classifier.py  test_email_processor.py  test_forecast.py  test_forecast_retrain.py  test_gmail.py  test_invoice_processor.py  test_metrics.py  test_migrations.py  test_models.py  test_po_processor.py  test_procurement_workflow.py  test_quickbooks.py  test_quickbooks_invoice_sync.py  test_quickbooks_sync.py  test_redash_queries.py  test_review_api.py  test_winedirect.py  test_winedirect_sync.py  test_workflow_orchestrator.py
(+78 files in other folders)
