[tool.poetry]
name = "une-femme-supply-chain"
version = "0.1.0"
description = "Une Femme Wine Supply Chain Intelligence Platform"
authors = ["Une Femme Team"]
# packages = [{include = "src"}]  # Disabled for Railway nixpacks build

[tool.poetry.dependencies]
python = "^3.11"
# FastAPI and web
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
python-multipart = "^0.0.20"
# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.0"
alembic = "^1.14.0"
# Task queue
celery = {extras = ["redis"], version = "^5.4.0"}
redis = "^5.2.0"
# Forecasting
prophet = "^1.1.0"
pandas = "^2.2.0"
numpy = "^2.0.0"
# Excel file support
openpyxl = "^3.1.0"
# HTTP client
httpx = "^0.28.0"
# LangGraph agents
langgraph = "^0.2.0"
langgraph-checkpoint-postgres = "^2.0.0"
langchain = "^0.3.0"
langchain-openai = "^0.3.0"
# Azure Document Intelligence
azure-ai-documentintelligence = "^1.0.0"
# Configuration
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
python-dotenv = "^1.0.0"
greenlet = "^3.3.1"
google-auth = "^2.48.0"
google-auth-oauthlib = "^1.2.4"
google-api-python-client = "^2.189.0"
# QuickBooks Online
python-quickbooks = "^0.9.0"
intuit-oauth = "^1.2.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
mypy = "^1.14.0"
ruff = "^0.9.0"
httpx = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "prophet.*",
    "redis.*",
    "pandas.*",
    "openpyxl.*",
    "google.*",
    "google_auth_oauthlib.*",
    "googleapiclient.*",
    "requests",
    "azure.*",
    "quickbooks.*",
    "intuitlib.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
